--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,19 +5,39 @@
     width: 100%;
     height: 100%;
     .menu{
-        color: #fff;
-        transition: 1s;
-        float: left;  
-        width: 50%;
-        height: 100%;
-        background: #fc614d;
+      color: #fff;
+      transition: 1s;
+      float: left;
+      width: 50%;
+      height: 100%;
+      background: #fc614d;
+      .description{
+        // opacity: 0;
+        display: none;
+      }
+    }
+    .description{
+      transition: 1s;
     }
     .menu-show{
-        width: 100%;
+      width: 100%;
+      .description{
+        // opacity: 1;
+        display: block;
+      }
     }
     .content{
         float: right;
         height: 100%;
         width: 50%;
     }
+}
+
+#nav-page{
+  max-height: 30px;
+  overflow-y: scroll;
+  div{
+    width: 100%;
+    min-height: 500px;
+  }
 }
